text change and attempted image fix

--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -79,10 +79,10 @@
         <h1>ART FROM MAMARONECK, NY: 2023</h1>
         <p>by Kovid Pal Odouard!</p>
     </div>
-    <img class="main-image" src="mamaroneck-2023/portrait%20of%20a%20thoughtful%20foreigner%20-%20main.jpg" alt="portrait of a thoughful foreigner" style="width: 30%;">
+    <img class="main-image" src="mamaroneck-2023/portrait%20of%20a%20thoughtful%20foreigner%20-%20main.jpg" alt="Portrait of a Thoughtful Foreigner" style="width: 30%;">
     <div class="detail-images">
-        <img src="mamaroneck-2023/portrait%20of%20a%20thoughtful%20foreigner%20-%20detail.jpg" alt="detail: portrait of a thoughtful foreigner" style="width: calc(50% - 7.5px);">
-        <img src="mamaroneck-2023/portrait%20of%20a%20thoughtful%20foreigner%20-%20process.jpg" alt="process: portrait of a thoughtful foreigner" style="width: calc(50% - 7.5px);">
+        <img src="mamaroneck-2023/portrait%20of%20a%20thoughtful%20foreigner%20-%20detail.jpg" alt="Detail of Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
+        <img src="mamaroneck-2023/portrait%20of%20a%20thoughtful%20foreigner%20-%20process.jpg" alt="Process of Portrait of a Thoughtful Foreigner" style="width: calc(50% - 7.5px);">
     </div>
     <div class="caption">
         <h2>portrait of a thoughtful foreigner</h2>
