--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -66,7 +66,7 @@
             font-family: 'Pixelon', sans-serif;
             margin-top: 10px;
             color: #543d0d;
-            width: 30%;
+            width: 50%; /* Set width to match main image */
         }
 
         .caption h2 {
@@ -81,8 +81,8 @@
         }
 
         .caption hyperlink {
-            color: #86BBBD; 
-            text-shadow: 1.5px 0.5px #9D6381;
+            color: #86BBBD;
+            text-shadow: 1.5px 1.5px #9D6381;
             text-decoration: none;
         }
 
@@ -103,7 +103,7 @@
     </div>
     <div class="caption">
         <h2>portrait of a thoughtful foreigner</h2>
-        <body>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <hyperlink href="https://aranxaortega.wixsite.com/arts/bio">aranxa ortega</hyperlink> did a little portrait of me at <hyperlink href="https://www.59rivoli.org/homepage/">59 rivoli</hyperlink>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
+        <body>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <hyperlink href="https://aranxaortega.wixsite.com/arts/bio" class="link-element">aranxa ortega</hyperlink> did a little portrait of me at 59 rivoli. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
 </body>
 </html>
