--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -80,13 +80,13 @@
             margin: 5px 0 0 0;
         }
 
-        .caption hyperlink {
+        .caption a {
             color: #86BBBD;
             text-shadow: 1.5px 1.5px #9D6381;
             text-decoration: none;
         }
 
-        .caption hyperlink:hover {
+        .caption a:hover {
             text-decoration: underline;
         }
     </style>
@@ -103,7 +103,7 @@
     </div>
     <div class="caption">
         <h2>portrait of a thoughtful foreigner</h2>
-        <body>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <hyperlink href="https://aranxaortega.wixsite.com/arts/bio" class="link-element">aranxa ortega</hyperlink> did a little portrait of me at 59 rivoli. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
+        <body>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" class="link-element">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" class="link-element">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
 </body>
 </html>
