open link in new tab

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
     </div>
     <div class="link-container">
-        <a href="https://kovid-pal-odouard.github.io/mamaroneck-2023/" class="link-element">
+        <a href="https://kovid-pal-odouard.github.io/mamaroneck-2023/" class="link-element" target="_blank">
             art from mamaroneck 2023
         </a>
     </div>
