--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -43,16 +43,6 @@
             font-size: 2em;
         }
 
-        .heading-text a {
-            font-family: 'Pixelon', sans-serif;
-            margin: 8px 0 0 0;
-            font-size: 2em;
-
-        .heading-text a: hover {
-            text-decoration: underline;
-            text-shadow: 2px 2px #bd9b55;
-        }
-
         .main-image {
             margin-top: 15px;
             width: 50%;
@@ -104,7 +94,7 @@
 <body>
     <div class="heading-text">
         <h1>ART FROM MAMARONECK, NY: 2023</h1>
-        <p>by <a> href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
+        <p>by Kovid Pal Odouard</p>
     </div>
     <img class="main-image" src="/mamaroneck-2023/thoughtful_foreigner.jpg" alt="portrait of a thoughtful foreigner">
     <div class="detail-images">
