--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -43,6 +43,21 @@
             font-size: 2em;
         }
 
+        .heading-text a {
+            font-family: 'Pixelon', sans-serif;
+            margin: 8px 0 0 0;
+            font-size: 2em; 
+        }
+
+        .heading-text a:hover {
+            font-family: 'Pixelon', sans-serif;
+            margin: 8px 0 0 0;
+            font-size: 2em;  
+            text-shadow: 2px 2px #bd9b55;
+            text-decoration: underline;
+        }
+            
+
         .main-image {
             margin-top: 15px;
             width: 50%;
@@ -94,14 +109,14 @@
 <body>
     <div class="heading-text">
         <h1>ART FROM MAMARONECK, NY: 2023</h1>
-        <p>by Kovid Pal Odouard</p>
+        <p>by <a href="kovid-pal-odouard.github.io" class=link-element>Kovid Pal Odouard</a>!</p>
     </div>
     <img class="main-image" src="/mamaroneck-2023/thoughtful_foreigner.jpg" alt="portrait of a thoughtful foreigner">
     <div class="detail-images">
         <img src="/mamaroneck-2023/thoughtful_foreigner_detail.jpg" alt="detail - portrait of a thoughtful foreigner">
         <img src="/mamaroneck-2023/thoughtful_foreigner_process.jpg" alt="detail - portrait of a thoughtful foreigner">
     </div>
-    <div class="caption" style="margin-bottom: 30px;">
+    <div class="caption">
         <h2>portrait of a thoughtful foreigner</h2>
         <body>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" class="link-element" target="_blank">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" class="link-element" target="_blank">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
