--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -47,6 +47,7 @@
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
             font-size: 2em; 
+            color: #543d0d
         }
 
         .heading-text a:hover {
@@ -55,6 +56,7 @@
             font-size: 2em;  
             text-shadow: 2px 2px #bd9b55;
             text-decoration: underline;
+            color: #543d0d
         }
             
 
