--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -47,7 +47,8 @@
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
             font-size: 2em; 
-            color: #543d0d
+            text-decoration: none;
+            color: #543d0d;
         }
 
         .heading-text a:hover {
@@ -56,7 +57,7 @@
             font-size: 2em;  
             text-shadow: 2px 2px #bd9b55;
             text-decoration: underline;
-            color: #543d0d
+            color: #543d0d;
         }
             
 
