--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -59,7 +59,6 @@
             text-decoration: underline;
             color: #543d0d;
         }
-            
 
         .main-image {
             margin-top: 15px;
@@ -112,7 +111,7 @@
 <body>
     <div class="heading-text">
         <h1>ART FROM MAMARONECK, NY: 2023</h1>
-        <p>by <a href="kovid-pal-odouard.github.io" class=link-element>Kovid Pal Odouard</a>!</p>
+        <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
     <img class="main-image" src="/mamaroneck-2023/thoughtful_foreigner.jpg" alt="portrait of a thoughtful foreigner">
     <div class="detail-images">
