--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -46,7 +46,6 @@
         .heading-text a {
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
-            font-size: 2em; 
             text-decoration: none;
             color: #543d0d;
         }
@@ -54,10 +53,14 @@
         .heading-text a:hover {
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
-            font-size: 2em;  
             text-shadow: 2px 2px #bd9b55;
             text-decoration: underline;
             color: #543d0d;
+        }
+
+        .heading-text p,
+        .heading-text a {
+            font-size: 2em;
         }
 
         .main-image {
