--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -40,12 +40,13 @@
         .heading-text p {
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
-            font-size: 2em;
+            font-size: 25px;
         }
 
         .heading-text a {
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
+            font-size: 25px;
             text-decoration: none;
             color: #543d0d;
         }
@@ -60,7 +61,7 @@
 
         .heading-text p,
         .heading-text a {
-            font-size: 2em;
+            font-size: 25px;
         }
 
         .main-image {
