--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -40,13 +40,13 @@
         .heading-text p {
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
-            font-size: 25px;
+            font-size: 34px;
         }
 
         .heading-text a {
             font-family: 'Pixelon', sans-serif;
             margin: 8px 0 0 0;
-            font-size: 25px;
+            font-size: 34px;
             text-decoration: none;
             color: #543d0d;
         }
@@ -61,7 +61,7 @@
 
         .heading-text p,
         .heading-text a {
-            font-size: 25px;
+            font-size: 34px;
         }
 
         .main-image {
@@ -122,7 +122,7 @@
         <img src="/mamaroneck-2023/thoughtful_foreigner_detail.jpg" alt="detail - portrait of a thoughtful foreigner">
         <img src="/mamaroneck-2023/thoughtful_foreigner_process.jpg" alt="detail - portrait of a thoughtful foreigner">
     </div>
-    <div class="caption">
+    <div class="caption" style="margin-bottom: 30px;">
         <h2>portrait of a thoughtful foreigner</h2>
         <body>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" class="link-element" target="_blank">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" class="link-element" target="_blank">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
