--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -66,7 +66,8 @@
 
         .main-image {
             margin-top: 15px;
-            width: 50%;
+            width: 1269px;
+            height: auto;
         }
 
         .detail-images {
@@ -122,7 +123,7 @@
         <img src="/mamaroneck-2023/thoughtful_foreigner_detail.jpg" alt="detail - portrait of a thoughtful foreigner">
         <img src="/mamaroneck-2023/thoughtful_foreigner_process.jpg" alt="detail - portrait of a thoughtful foreigner">
     </div>
-    <div class="caption" style="margin-bottom: 30px;">
+    <div class="caption" style="margin-bottom: 50px;">
         <h2>portrait of a thoughtful foreigner</h2>
         <body>late july 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" class="link-element" target="_blank">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" class="link-element" target="_blank">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
