--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
     <div class="heading-text">
-        <h1>ART FROM MAMARONECK, NY: 2023</h1>
+        <h1>ART FROM MAMARONECK, NY - 2023</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
     <img class="main-image" src="/mamaroneck-2023/thoughtful_foreigner.jpg" alt="portrait of a thoughtful foreigner">
