--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -66,7 +66,7 @@
 
         .main-image {
             margin-top: 15px;
-            width: 1269px;
+            width: 1080px;
             height: auto;
         }
 
@@ -74,11 +74,11 @@
             display: flex;
             justify-content: space-between;
             margin-top: 15px;
-            width: 50%;
+            width: 1080px;
         }
 
         .detail-images img {
-            width: calc(50% - 7.5px);
+            width: calc(1080px - 7.5px);
             height: auto;
             object-fit: cover;
         }
