--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -111,9 +111,8 @@
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/thoughtful_foreigner_detail.jpg" alt="detail - portrait of a thoughtful foreigner">
         <img src="/mamaroneck-2023/thoughtful_foreigner_process.jpg" alt="detail - portrait of a thoughtful foreigner">
-        <!-- Add more detail images here -->
     </div>
-    <div class="caption" style="margin-bottom: 50px;">
+    <div class="caption" style="margin-bottom: 25px;">
         <h2>portrait of a thoughtful foreigner</h2>
         <body>late july, 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" class="link-element" target="_blank">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" class="link-element" target="_blank">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
@@ -122,9 +121,15 @@
         <img src="/mamaroneck-2023/self_portrait_process_2.jpg" alt="portrait progress 1">
         <img src="/mamaroneck-2023/self_portrait_process_1.jpg" alt="portrait progress 2">
     </div>
-     <div class="caption" style="margin-bottom: 50px;">
+    <div class="caption" style="margin-bottom: 25px;">
         <h2>untitled self portrait</h2>
         <body>mid october, 2022: micron pen, acrylic, dip pen/brush + ink. made in a kitchen.</body>
     </div>
+    <img class="main-image" src="/mamaroneck-2023/inkworld_inception.jpg" alt="inkworld inception">
+    </div>
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>inkworld inception</h2>
+        <body>mid november 17, 2022: water, ink, brush, dip pen, towel, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do buried under dark-liquid-turned-solid, many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
+    </div>    
 </body>
 </html>
