--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -129,7 +129,7 @@
     </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>inkworld inception</h2>
-        <body>mid november 17, 2022: water, ink, brush, dip pen, towel, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do buried under dark-liquid-turned-solid, many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
+        <body>mid november 17, 2022: water, ink, brush, dip pen, towel, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do, buried under dark-liquid-turned-solid many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
     </div>    
 </body>
 </html>
