--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -129,7 +129,12 @@
     </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>inkworld inception</h2>
-        <body>mid november 17, 2022: water, ink, brush, dip pen, towel, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do, buried under dark-liquid-turned-solid many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
-    </div>    
+        <body>november 17, 2022: water, ink, brush, dip pen, towel, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do, buried under dark-liquid-turned-solid many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
+    </div> 
+    <img class="main-image" src="/mamaroneck-2023/desk_in_a_dark_world.jpg" alt="desk in a dark world">
+    </div>
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>desk in a dark world</h2>
+        <body>november 30, 2022: embracing what was incepted in inkworld inception. water, ink, brush, dip pen, towel, miscellaneous crap in my room. a frame of inkworld.</body>
 </body>
 </html>
