--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -136,5 +136,14 @@
     <div class="caption" style="margin-bottom: 25px;">
         <h2>desk in a dark world</h2>
         <body>november 30, 2022: embracing what was incepted in inkworld inception. water, ink, brush, dip pen, towel, miscellaneous crap in my room. a frame of inkworld.</body>
+    </div>
+    <div class="detail-images" style="--n: 2;"> 
+        <img src="/mamaroneck-2023/darkness_with_byron_raja.jpg" alt="darkness">
+        <img src="/mamaroneck-2023/darkness_with_byron_raja_process.jpg" alt="darkness process">
+   </div>
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>the title is a secret</h2>
+        <body>january 7, 2023: a good friend of mine laid some tape on a plain piece of watercolor paper and told me about something. when there was nothing left to be said, there was this^. love you bro <3</body>
+    </div>    
 </body>
 </html>
