--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -129,7 +129,7 @@
     </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>inkworld inception</h2>
-        <body>november 17, 2022: water, ink, brush, dip pen, towel, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do, buried under dark-liquid-turned-solid many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
+        <body>november 17, 2022: water, ink, brush, dip pen, towel, tape, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do, buried under dark-liquid-turned-solid many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
     </div> 
     <img class="main-image" src="/mamaroneck-2023/desk_in_a_dark_world.jpg" alt="desk in a dark world">
     </div>
@@ -143,7 +143,19 @@
    </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>the title is a secret</h2>
-        <body>january 7, 2023: a good friend of mine laid some tape on a plain piece of watercolor paper and told me about something. when there was nothing left to be said, there was this^. love you bro <3</body>
+        <body>january 7, 2023: water, ink, brush, dip pen, towel, tape, miscellaneous crap in my room, paint marker. a good friend of mine laid some tape on a plain piece of watercolor paper and told me about something. when there was nothing left to be said, there was this^. love you bro <3</body>
     </div>    
+    <div class="detail-images" style="--n: 2;">
+        <img src="/mamaroneck-2023/untitled.jpg" alt="untitled">
+        <img src="/mamaroneck-2023/untitled_process_3.jpg" alt="untitled process 3">
+    </div> 
+    <div class="detail-images" style="--n: 2;">
+        <img src="/mamaroneck-2023/untitled_process_2.jpg" alt="untitled process 2">
+        <img src="/mamaroneck-2023/untitled_process_1.jpg" alt="untitled process 1">
+    </div> 
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>untitled</h2>
+        <body>january 3, 2023: i missed having faces in my work, so i started with a face. water, ink, brush, dip pen, towel, miscellaneous crap in my room, paint marker. </body>
+    </div>   
 </body>
 </html>
