--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -116,14 +116,17 @@
         <h2>portrait of a thoughtful foreigner</h2>
         <body>late july, 2022: a portrait of an acquaintance of mine. micron pen, a modified crappy chisel-tipped marker, acrylic. my favorite of a couple of portraits i did in the year and a half since august 2021, when <a href="https://aranxaortega.wixsite.com/arts/bio" class="link-element" target="_blank">aranxa ortega</a> did a little portrait of me at <a href="https://www.59rivoli.org/homepage/" class="link-element" target="_blank">59 rivoli</a>. i thought it was so magical that the act of putting lines on a page could reproduce a life in that way; that an image of a life could be captured and preserved by my own careful motions with a pen. i found that, in all my moments doing portraiture, there was always this one beautifully jarring instant when i filled in the eyes... all of a sudden, the marks i had put down returned the warmth of my gaze; all of a sudden, there she was.</body>
     </div>
-    <div class="detail-images" style="--n: 3;">
+    <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/self_portrait.jpg" alt="untitled self portrait">
         <img src="/mamaroneck-2023/self_portrait_process_2.jpg" alt="portrait progress 1">
-        <img src="/mamaroneck-2023/self_portrait_process_1.jpg" alt="portrait progress 2">
+    </div>
+    <div class="detail-images" style="--n: 2;">
+        <img src="/mamaroneck-2023/self_portrait_process_3.jpg" alt="untitled self portrait">
+        <img src="/mamaroneck-2023/underwater_filtered.jpg" alt="portrait progress 1">
     </div>
     <div class="caption" style="margin-bottom: 25px;">
-        <h2>untitled self portrait</h2>
-        <body>mid october, 2022: micron pen, acrylic, dip pen/brush + ink. made in a kitchen.</body>
+        <h2>untitled self portrait ; submerged bonus</h2>
+        <body>mid october, 2022: micron pen, acrylic, dip pen/brush + ink. made in a kitchen; november, 2022: micron pen, ink, brush, dip pen, paint marker (added the last day of 2022). a scope of mythical proportion drowned.</body>
     </div>
     <img class="main-image" src="/mamaroneck-2023/inkworld_inception.jpg" alt="inkworld inception">
     </div>
@@ -155,7 +158,7 @@
     </div> 
     <div class="caption" style="margin-bottom: 25px;">
         <h2>untitled</h2>
-        <body>january 3, 2023: i missed having faces in my work, so i started with a face. water, ink, brush, dip pen, towel, miscellaneous crap in my room, paint marker. </body>
+        <body>january 3, 2023: i missed having faces in my work, so i started with a face. it ended up kind of being mine. water, ink, brush, dip pen, towel, miscellaneous crap in my room, paint marker. </body>
     </div>   
 </body>
 </html>
