minor text changes

--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -118,15 +118,15 @@
     </div>
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/self_portrait.jpg" alt="untitled self portrait">
-        <img src="/mamaroneck-2023/self_portrait_process_2.jpg" alt="portrait progress 1">
+        <img src="/mamaroneck-2023/self_portrait_process_2.jpg" alt="portrait progress 2">
     </div>
     <div class="detail-images" style="--n: 2;">
-        <img src="/mamaroneck-2023/self_portrait_process_3.jpg" alt="untitled self portrait">
-        <img src="/mamaroneck-2023/underwater_filtered.jpg" alt="portrait progress 1">
+        <img src="/mamaroneck-2023/self_portrait_process_1.jpg" alt="portrait progress 1">
+        <img src="/mamaroneck-2023/underwater_filtered.jpg" alt="underwater">
     </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>untitled self portrait ; submerged bonus</h2>
-        <body>mid october, 2022: micron pen, acrylic, dip pen/brush + ink. made in a kitchen; november, 2022: micron pen, ink, brush, dip pen, paint marker (added the last day of 2022). a scope of mythical proportion drowned.</body>
+        <body>mid october, 2022: micron pen, acrylic, dip pen/brush + ink. made in a kitchen  ;   november, 2022: micron pen, ink, brush, dip pen, paint marker (added the last day of 2022). a scope of mythical proportion drowned.</body>
     </div>
     <img class="main-image" src="/mamaroneck-2023/inkworld_inception.jpg" alt="inkworld inception">
     </div>
