ozymandias and others

--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -125,7 +125,7 @@
         <img src="/mamaroneck-2023/underwater_filtered.jpg" alt="underwater">
     </div>
     <div class="caption" style="margin-bottom: 25px;">
-        <h2>untitled self portrait ; submerged bonus</h2>
+        <h2>untitled self portrait ; portrait submerged</h2>
         <body>mid october, 2022: micron pen, acrylic, dip pen/brush + ink. made in a kitchen  ;   november, 2022: micron pen, ink, brush, dip pen, paint marker (added the last day of 2022). a scope of mythical proportion drowned.</body>
     </div>
     <img class="main-image" src="/mamaroneck-2023/inkworld_inception.jpg" alt="inkworld inception">
@@ -135,7 +135,6 @@
         <body>november 17, 2022: water, ink, brush, dip pen, towel, tape, miscellaneous crap in my room. a litte fantasy about a day in which i have nothing to do, buried under dark-liquid-turned-solid many times over. a new motif in my work was born here: lines that look like text but mean nothing at all. there's something about a form that gestures at (but does not become) a sign...</body>
     </div> 
     <img class="main-image" src="/mamaroneck-2023/desk_in_a_dark_world.jpg" alt="desk in a dark world">
-    </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>desk in a dark world</h2>
         <body>november 30, 2022: embracing what was incepted in inkworld inception. water, ink, brush, dip pen, towel, miscellaneous crap in my room. a frame of inkworld.</body>
@@ -148,6 +147,11 @@
         <h2>the title is a secret</h2>
         <body>january 7, 2023: water, ink, brush, dip pen, towel, tape, miscellaneous crap in my room, paint marker. a good friend of mine laid some tape on a plain piece of watercolor paper and told me about something. when there was nothing left to be said, there was this^. love you bro <3</body>
     </div>    
+    <img class="main-image" src="/mamaroneck-2023/rock_map_thing.jpg" alt="rockmap">
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>map-rock?</h2>
+        <body>early february, 2023: micron pen, ink, paint marker, acrylic, water. a map of?</body>
+    </div>        
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/untitled.jpg" alt="untitled">
         <img src="/mamaroneck-2023/untitled_process_3.jpg" alt="untitled process 3">
@@ -160,5 +164,10 @@
         <h2>untitled</h2>
         <body>january 3, 2023: i missed having faces in my work, so i started with a face. it ended up kind of being mine. water, ink, brush, dip pen, towel, miscellaneous crap in my room, paint marker. </body>
     </div>   
+    <img class="main-image" src="/mamaroneck-2023/ozymandias.jpg" alt="ozymandias">
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>OZYMANDIAS</h2>
+        <body>first half of march, 2023: inspired by percy bysshe shelley. micron pen, paint marker, acyrlic, ink + dip pen. an attempt to restore a sense of *life* in my work that portraiture used to give me. maybe this is the visage before it shattered... maybe it's the narrator... maybe its me reading the poem! </body>
+    </div>    
 </body>
 </html>
