--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -122,7 +122,7 @@
     </div>
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/self_portrait_process_1.jpg" alt="portrait progress 1">
-        <img src="/mamaroneck-2023/underwater_filtered.jpg" alt="underwater">
+        <img src="/mamaroneck-2023/underwater_filtered.png" alt="underwater">
     </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>untitled self portrait ; portrait submerged</h2>
@@ -168,6 +168,18 @@
     <div class="caption" style="margin-bottom: 25px;">
         <h2>OZYMANDIAS</h2>
         <body>first half of march, 2023: inspired by percy bysshe shelley. micron pen, paint marker, acyrlic, ink + dip pen. an attempt to restore a sense of *life* in my work that portraiture used to give me. maybe this is the visage before it shattered... maybe it's the narrator... maybe its me reading the poem! </body>
+    </div>  
+    <div class="detail-images" style="--n: 2;">
+        <img src="/mamaroneck-2023/green_brown_collage.jpg" alt="character collaged">
+        <img src="/mamaroneck-2023/blind_contour_poc_union.jpg" alt="untitled process 1">    
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>untitled blind contour ; life torn usunder and pieced together</h2>
+        <body>june, 2022: self-portrait, buried a bit. some random pen, acrylic, flyers for the mamaroneck high school POC union.  ;   april 20, 2023: the result of an act of violence commited on a representation of a life because the composition was mid. born from it, a tapestry of life-parts. the horrors of human creativity!</body>
+    </div>  
+    <img class="main-image" src="/mamaroneck-2023/living_man.png" alt="living man">
+    <div class="caption" style="margin-bottom: 25px;">
+        <h2>living man</h2>
+        <body>second half of april, 2023: paint marker, acyrlic, ink + dip pen, micron. he has a mullet and five eyes; he is alive.</body>
     </div>    
 </body>
 </html>
