--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -150,7 +150,7 @@
     <img class="main-image" src="/mamaroneck-2023/rock_map_thing.jpg" alt="rockmap">
     <div class="caption" style="margin-bottom: 25px;">
         <h2>map-rock?</h2>
-        <body>early february, 2023: micron pen, ink, paint marker, acrylic, water. a map of?</body>
+        <body>early february, 2023: micron pen, ink, paint marker, acrylic, water, split black tea. a map of?</body>
     </div>        
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/untitled.jpg" alt="untitled">
@@ -171,7 +171,8 @@
     </div>  
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/green_brown_collage.jpg" alt="character collaged">
-        <img src="/mamaroneck-2023/blind_contour_poc_union.jpg" alt="untitled process 1">    
+        <img src="/mamaroneck-2023/blind_contour_poc_union.jpg" alt="untitled process 1">  
+    </div>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>untitled blind contour ; life torn usunder and pieced together</h2>
         <body>june, 2022: self-portrait, buried a bit. some random pen, acrylic, flyers for the mamaroneck high school POC union.  ;   april 20, 2023: the result of an act of violence commited on a representation of a life because the composition was mid. born from it, a tapestry of life-parts. the horrors of human creativity!</body>
