--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -167,7 +167,7 @@
     <img class="main-image" src="/mamaroneck-2023/ozymandias.jpg" alt="ozymandias">
     <div class="caption" style="margin-bottom: 25px;">
         <h2>OZYMANDIAS</h2>
-        <body>first half of march, 2023: inspired by percy bysshe shelley. micron pen, paint marker, acyrlic, ink + dip pen. an attempt to restore a sense of *life* in my work that portraiture used to give me. maybe this is the visage before it shattered... maybe it's the narrator... maybe its me reading the poem! </body>
+        <body>first half of march, 2023: inspired by percy bysshe shelley. micron pen, paint marker, acrylic, ink + dip pen. an attempt to restore a sense of *life* in my work that portraiture used to give me. maybe this is the visage before it shattered... maybe it's the narrator... maybe its me reading the poem! </body>
     </div>  
     <div class="detail-images" style="--n: 2;">
         <img src="/mamaroneck-2023/blind_contour_poc_union.jpg" alt="untitled process 1"> 
@@ -180,7 +180,7 @@
     <img class="main-image" src="/mamaroneck-2023/living_man.png" alt="living man">
     <div class="caption" style="margin-bottom: 25px;">
         <h2>living man</h2>
-        <body>second half of april, 2023: paint marker, acyrlic, ink + dip pen, micron. he has a mullet and five eyes; he is alive.</body>
+        <body>second half of april, 2023: paint marker, acrylic, ink + dip pen, micron. he has a mullet and five eyes; he is alive.</body>
     </div>    
 </body>
 </html>
