--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -182,10 +182,10 @@
         <h2>living man</h2>
         <body>second half of april, 2023: paint marker, acrylic, ink + dip pen, micron. he has a mullet and five eyes; he is alive.</body>
     </div>    
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/7aiKASJwWJAFSDEFQs4Asa?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/7aiKASJwWJAFSDEFQs4Asa?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>on the banyan</h2>
-        <body>an audio piece i did for evan madin's mamaroneck public radio.</body>
+        <body>written in april, recorded in may 2023: an audio piece i did for evan madin's mamaroneck public radio.</body>
     </div>    
 </body>
 </html>
