--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -185,7 +185,7 @@
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/7aiKASJwWJAFSDEFQs4Asa?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <div class="caption" style="margin-bottom: 25px;">
         <h2>on the urban banyans of kolkata</h2>
-        <body>written in april, recorded in may 2023: an audio piece i did for evan madin's mamaroneck public radio. <a href="https://soundcloud.com/evan-madin/season-7-episode-3-spaced-out" class="link-element" target="_blank">soundcloud link here! it's also on the apple podcasts app but to hell with that.</a></body>
+        <body>written in april, recorded in may 2023: an audio piece i did for evan madin's mamaroneck public radio. <a href="https://soundcloud.com/evan-madin/season-7-episode-3-spaced-out" class="link-element" target="_blank">soundcloud link here!</a> it's also on the apple podcasts app but to hell with that.</body>
     </div>    
 </body>
 </html>
