--- a/mamaroneck-2023/index.html
+++ b/mamaroneck-2023/index.html
@@ -92,8 +92,8 @@
         }
 
         .caption a {
-            color: #86BBBD;
-            text-shadow: 1.5px 1.5px #9D6381;
+            color: #9D6381;
+            text-shadow: 1.5px 1.5px #86BBBD;
             text-decoration: none;
         }
 
