button hover animation

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
             background-color: #d0b884; 
             text-decoration: none; /* Remove underline from text */
         }
+        .link-element: hover {
+            text-decoration:underline
+        }
         .link-element::after {
             content: '';
             position: absolute;
