--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             left: 1.5%; /* Adjust this value for horizontal positioning */
             color: #fae828; /* Text color */
             font-family: 'Pixelon', sans-serif;
-            font-size: 1.2em;
-            line-height: 1.5em;
+            font-size: 18px;
+            line-height: 20em;
             max-width: 25%; /* Limit of how far it goes before wrapping */
             text-shadow: 2px 2px #bd7306; /* Apply text shadow with desired color */
         }
