--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             color: #fae828; /* Text color */
             font-family: 'Pixelon', sans-serif;
             font-size: 18px;
-            line-height: 20em;
+            line-height: 20px;
             max-width: 25%; /* Limit of how far it goes before wrapping */
             text-shadow: 2px 2px #bd7306; /* Apply text shadow with desired color */
         }
@@ -73,7 +73,7 @@
             bottom: 1%; /* Adjust this value for vertical positioning */
             color: #ffffff;
             font-family: 'Pixelon', sans-serif;
-            font-size: 1em;
+            font-size: 12px;
         }
         .lil-message-text {
             position: absolute;
@@ -82,7 +82,7 @@
             color: #79e896;
             text-align: center;
             font-family: 'Pixelon', sans-serif;
-            font-size: 0.5em;
+            font-size: 12px;
             transform: rotate(-35deg);
             animation: lilTextResize 2s infinite;
         }
@@ -96,7 +96,7 @@
             position: relative;
             display: inline-block;
             font-family: 'Pixelon', sans-serif;
-            font-size: 1.2em;
+            font-size: 13px;
             color: #f2EAD3;
             text-shadow: 2px 2px #86BBBD;
             padding: 8px; /* Add padding for background */
@@ -127,10 +127,10 @@
         }
         @keyframes lilTextResize {
             0%, 100% {
-                font-size: 0.6em;
+                font-size: 8px;
             }
             50% {
-                font-size: 0.8em;
+                font-size: 12px;
             }
         }
     </style>
